Fixed Questions list scrollbar

--- a/style.css
+++ b/style.css
@@ -82,6 +82,16 @@ h1,h2,h3,h4,h5,h6{
 }
 
 
+.scrollbar-gray::-webkit-scrollbar {
+width: 5px;
+background-color: #F5F5F5; }
+
+.scrollbar-gray::-webkit-scrollbar-thumb {
+/*border-radius: 10px;*/
+/*-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);*/
+background-color: #e2e2e2; }
+
+
 .cndce-template{
 	display: none;
 }
